fix: build error id to userId

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build
       run: |
         pwd
-        go build -o main ./cmd/main.go
+        GOARCH=amd64 GOOS=linux go build -v -o main cmd/main.go
         ls -al
 
   docker:
