--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,8 +9,13 @@ on:
       - main
 
 env:
-  AWS_REGION: ap-southeast-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: syarif_04-repository           # set this to your Amazon ECR repository name
+  AWS_REGION: ap-southeast-1                    # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: syarif_04-repository          # set this to your Amazon ECR repository name
+  ECS_SERVICE: projectsprint-syarif_04-service  # set this to your Amazon ECS service name
+  ECS_CLUSTER: projectsprint-cluster            # set this to your Amazon ECS cluster name
+  CONTAINER_NAME: syarif_04-container           # set this to the name of the container in the
+                                                # containerDefinitions section of your task definition
+
 
 jobs:
   deploy:
@@ -44,3 +49,6 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+      - name: Force new ECS deployment
+        run: |
+          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --force-new-deployment
